BackupGnuCash

V# 2.?.? dd mmm yyyy Chris Good

    * Clear GC Data Modified DateTime if file not found.

V# 2.1.0 23 Apr 2021 Chris Good

    * Add support for Flatpak on Linux.
    * 7z[.exe] command: Move password arg from after archive to before.
      Required for Linux Ubuntu 20.04 p7zip-full 16.02+dfsg-7build1 to
      fix "No more files" error.

V# 2.0.1 11 Mar 2020 Chris Good

    * Fix bug where a deleted Book was not also removed from defaultProps so
      would reappear next time defaultProperties file was loaded.
    * Update year to 2020 in copyright header of .java files.
    * Remove build\built-jar.properties from git.

V# 2.0.0 28 Jul 2019 Chris Good

    * Convert to Modular Java 11 project.

V# 1.3.1 26 Feb 2019 Chris Good

    * Linux Java 8 Help button causes hang: wrap the call to any AWT APIs
      (Desktop.getDesktop().browse) in a runnable and submit it for execution
      via java.awt.EventQueue.invokeLater().

V# 1.3.0 24 Feb 2019 Chris Good

    * Mods for GnuCash V3.
    * Optionally back up V2 + V3 configuration folders and files.
    * Backup more V2 configuration files, including Windows registry,
      Linux dconf, and AqBanking settings.
    * Add Help button.

V# 1.22 10 Mar 2018 Chris Good

    * Fix scr/backupgnucash/README.md multiword Table Of Contents entries
    * Remove warning when running for first time and settings have not yet been
      saved:
       getUserDefaults: /home/[user]/.BupGc/defaultProperties (No such file or directory)

V# 1.21 21 Jul 2016 Chris Good

    * Fix use of & instead of && (didn't actually matter).
    * Use netbeans 8.1.

V# 1.20 15 Jul 2016 Chris Good

    * Check for Windows 7-Zip in Program Files (x86).
    * Allow configurations for multiple books.
    * Make ToolTips font bigger.

    Note: Java 1.8.0_72 or later is now required due to bug
        https://bugs.openjdk.java.net/browse/JDK-8136838
        which meant the value of ComboBox.getValue() was not correct in previous